force-app/main/default/objects/Account/fields/deploytest__c.field-meta.xml
<CustomField>
    <fullName>deploytest__c</fullName>
    <label>デプロイ確認用の項目</label>
    <length>25</length>
    <type>Text</type>
</CustomField>