force-app/main/default/objects/Account/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>ボタン押下確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>