force-app/main/default/objects/Account/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>参照のみテキスト</label>
    <length>100</length>
    <type>Text</type>
</CustomField>