force-app/main/default/objects/Account/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ユーザー</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRck</relationshipName>
    <type>Lookup</type>
</CustomField>